Editor menu improvements